Use normalized type instead of possible type array for localization

--- a/src/components/editor/predicateForm.html
+++ b/src/components/editor/predicateForm.html
@@ -1,4 +1,4 @@
-<h3>{{ctrl.predicate.type + ' information' | capitalize | translate}}</h3>
+<h3>{{ctrl.predicate.normalizedType + ' information' | capitalize | translate}}</h3>
 
 <editable title="{{ctrl.predicate.normalizedType + ' label' | capitalize}}">
   <input id="predicateName" class="form-control" type="text" localized-input="label" ng-model="ctrl.predicate.label" />
