Hide author in history when not logged in
Closes #304

--- a/src/components/common/historyModal.html
+++ b/src/components/common/historyModal.html
@@ -9,7 +9,7 @@
         <li ng-repeat="version in ctrl.versions"
             ng-class="{'model-panel__selection': ctrl.isSelected(version)}"
             ng-click="ctrl.select(version)">
-          {{version.createdAt | localizedDate}} - {{version.createdBy}}
+          {{version.createdAt | localizedDate}} <span ng-if="ctrl.showAuthor">- {{version.createdBy}}</span>
           <ajax-loading-indicator-small ng-if="ctrl.isLoading(version)"></ajax-loading-indicator-small>
         </li>
       </ul>
