Show concept id when selected

--- a/src/components/editor/searchConceptModal.html
+++ b/src/components/editor/searchConceptModal.html
@@ -44,6 +44,7 @@
 
             <div ng-if="ctrl.isConcept(ctrl.selection)">
               <non-editable title="Concept" value="ctrl.selection.label"></non-editable>
+              <non-editable title="Id" value="ctrl.selection.id"></non-editable>
               <non-editable title="Definition" value="ctrl.selection.comment"></non-editable>
             </div>
 
