--- a/src/components/editor/searchConceptModal.html
+++ b/src/components/editor/searchConceptModal.html
@@ -43,7 +43,8 @@
           <div ng-show="ctrl.selection">
 
             <div ng-if="ctrl.isConcept(ctrl.selection)">
-              <non-editable title="Concept" value="ctrl.selection.label"></non-editable>
+              <non-editable ng-if="!ctrl.selection.suggestion" title="Concept" value="ctrl.selection.label"></non-editable>
+              <non-editable ng-if="ctrl.selection.suggestion" title="Concept suggestion" value="ctrl.selection.label"></non-editable>
               <non-editable title="Id" value="ctrl.selection.id"></non-editable>
               <non-editable title="Definition" value="ctrl.selection.comment"></non-editable>
             </div>
