--- a/src/components/editor/classForm.html
+++ b/src/components/editor/classForm.html
@@ -57,7 +57,7 @@
 
 <div ng-show="ctrl.class.isOfType('shape') && (ctrl.class.constraint.isVisible() || ctrl.isEditing())">
   <h4 translate>Logical constraints</h4>
-  <editable-constraint constraint="ctrl.class.constraint" model="ctrl.model"></editable-constraint>
+  <editable-constraint constraint="ctrl.class.constraint" model="ctrl.model" class="ctrl.class"></editable-constraint>
 </div>
 
 <h4 translate>Additional information</h4>
