Reduce duplicate api calls with root class

--- a/src/components/model/model.html
+++ b/src/components/model/model.html
@@ -1,4 +1,5 @@
-<div ng-hide="ctrl.firstLoading && ctrl.loading">
+<div ng-show="ctrl.loading"><ajax-loading-indicator></ajax-loading-indicator></div>
+<div ng-hide="ctrl.loading">
 
   <model-view ng-if="ctrl.model" model="ctrl.model" model-controller="ctrl"></model-view>
 
