--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -397,7 +397,7 @@ selection-view, .main-editable-content {
     width: 30px;
     height: 30px;
     margin: 0;
-    padding: 8px;
+    padding: 8px 7px;
     top: 75px;
     background-color: rgba(231,231,231,0.9);
     border: none;
