--- a/src/components/editor/searchClassModal.html
+++ b/src/components/editor/searchClassModal.html
@@ -1,58 +1,72 @@
-<modal-template editing="false">
-  <modal-title translate>Search classes</modal-title>
+<form name="form">
+  <modal-template editing="false">
+    <modal-title translate>Search classes</modal-title>
 
-  <modal-body>
+    <modal-body>
 
-    <div class="row">
+      <div class="row">
 
-      <div class="col-md-4">
-        <p translate>Class search info</p>
-        <div class="input-group input-group-lg">
-          <input autofocus type="text" class="form-control" placeholder="{{'search class' | translate}}"
-                 ng-model="ctrl.searchText"
-                 ng-model-options="{ debounce: { 'default': 500, 'blur': 0 } }"
-                 key-control="ctrl.searchResults" />
-          <i class="glyphicon glyphicon-search form-control-feedback"></i>
-        </div>
+        <div class="col-md-4">
+          <p translate>Class search info</p>
+          <div class="input-group input-group-lg">
+            <input autofocus type="text" class="form-control" placeholder="{{'search class' | translate}}"
+                   ng-model="ctrl.searchText"
+                   ng-model-options="{ debounce: { 'default': 500, 'blur': 0 } }"
+                   key-control="ctrl.searchResults" />
+            <i class="glyphicon glyphicon-search form-control-feedback"></i>
+          </div>
 
-        <div class="input-group input-group-lg">
-          <div class="selectContainer">
-            <select class="form-control" ng-model="ctrl.showModel" ng-options="model | translateLabel for model in ctrl.models">
-              <option value="" translate>All models</option>
-            </select>
+          <div class="input-group input-group-lg">
+            <div class="selectContainer">
+              <select class="form-control" ng-model="ctrl.showModel" ng-options="model | translateLabel for model in ctrl.models">
+                <option value="" translate>All models</option>
+              </select>
+            </div>
+          </div>
+
+          <div class="checkbox" ng-hide="ctrl.onlySelection">
+            <label><input type="checkbox" ng-model="ctrl.showProfiles">{{'Show classes defined in profiles' | translate}}</label>
           </div>
         </div>
 
-        <div class="checkbox" ng-hide="ctrl.onlySelection">
-          <label><input type="checkbox" ng-model="ctrl.showProfiles">{{'Show classes defined in profiles' | translate}}</label>
+        <div class="col-md-4 search-results">
+          <ajax-loading-indicator ng-if="ctrl.loadingResults"></ajax-loading-indicator>
+
+          <search-results ng-if="!ctrl.loadingResults" items="ctrl.searchResults" exclude="ctrl.exclude" on-select="ctrl.selectItem(item)">
+            <h5>{{searchResult | translateLabel}} <i ng-class="searchResult.glyphIconClass"></i></h5>
+            <p>{{searchResult.definedBy | translateLabel}} <ajax-loading-indicator-small ng-if="ctrl.loadingSelection(searchResult)"></ajax-loading-indicator-small></p>
+          </search-results>
+        </div>
+
+        <div class="col-md-4 search-selection">
+          <class-form ng-if="!ctrl.isSelectionFormData() && ctrl.selection" class="ctrl.selection" old-class="ctrl.selection" model="ctrl.model"></class-form>
+
+          <div ng-if="ctrl.isSelectionFormData()">
+            <editable title="External URI">
+              <div class="input-group input-group-md">
+                <input id="externalUri" type="text" class="form-control" required uri-input model="ctrl.model" ng-model="ctrl.selection.externalUri" />
+              </div>
+            </editable>
+            <editable title="Class label">
+              <div class="input-group input-group-md">
+                <input id="className" type="text" class="form-control" required string-input="label" ng-model="ctrl.selection.className" />
+              </div>
+            </editable>
+          </div>
+
+          <submit-error-panel error="ctrl.submitError"></submit-error-panel>
         </div>
       </div>
 
-      <div class="col-md-4 search-results">
-        <ajax-loading-indicator ng-if="ctrl.loadingResults"></ajax-loading-indicator>
+    </modal-body>
 
-        <search-results ng-if="!ctrl.loadingResults" items="ctrl.searchResults" exclude="ctrl.exclude" on-select="ctrl.selectItem(item)">
-          <h5>{{searchResult | translateLabel}} <i ng-class="searchResult.glyphIconClass"></i></h5>
-          <p>{{searchResult.definedBy | translateLabel}} <ajax-loading-indicator-small ng-if="ctrl.loadingSelection(searchResult)"></ajax-loading-indicator-small></p>
-        </search-results>
+    <modal-buttons>
+      <div class="alert alert-danger" style="display: inline; margin-right: 10px;" role="alert" ng-show="ctrl.cannotConfirm">
+        <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+        <span>{{ctrl.cannotConfirm | translate}}</span>
       </div>
-
-      <div class="col-md-4 search-selection">
-        <form class="editable-form">
-          <class-form ng-if="ctrl.selection" class="ctrl.selection" old-class="ctrl.selection" model="ctrl.model"></class-form>
-        </form>
-      </div>
-
-    </div>
-  </modal-body>
-
-  <modal-buttons>
-    <div class="alert alert-danger" style="display: inline; margin-right: 10px;" role="alert" ng-show="ctrl.cannotConfirm">
-      <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-      <span>{{ctrl.cannotConfirm | translate}}</span>
-    </div>
-    <button type="button" class="btn btn-default" ng-click="ctrl.close()" translate>Cancel</button>
-    <button type="button" class="btn btn-default" ng-click="ctrl.confirm()" ng-disabled="!ctrl.selection || ctrl.cannotConfirm">{{ctrl.textForSelection(ctrl.selection) | translate}}</button>
-  </modal-buttons>
-</modal-template>
-
+      <button type="button" class="btn btn-default" ng-click="ctrl.close()" translate>Cancel</button>
+      <button type="button" class="btn btn-default" ng-click="ctrl.confirm()" ng-disabled="!ctrl.selection || ctrl.cannotConfirm || form.$invalid || form.$pending">{{ctrl.textForSelection(ctrl.selection) | translate}}</button>
+    </modal-buttons>
+  </modal-template>
+</form>
