--- a/src/components/editor/searchConceptModal.html
+++ b/src/components/editor/searchConceptModal.html
@@ -17,7 +17,7 @@
             <i class="glyphicon glyphicon-search form-control-feedback"></i>
           </div>
 
-          <label for="reference" translate>Reference</label>
+          <label for="reference" translate>Reference filter</label>
           <div class="input-group input-group-lg">
             <div class="selectContainer">
               <select id="reference" class="form-control" ng-model="ctrl.selectedReference" ignore-dirty
