--- a/src/components/editor/searchPredicateModal.html
+++ b/src/components/editor/searchPredicateModal.html
@@ -1,8 +1,14 @@
 <form name="form">
   <modal-template editing="false">
     <modal-title>
-      <span ng-show="ctrl.typeSelectable" translate>Search attributes and associations</span>
-      <span ng-hide="ctrl.typeSelectable">{{('Search ' + ctrl.type + 's') | translate}}</span>
+      <div ng-show="ctrl.onlySelection">
+        <span ng-show="ctrl.typeSelectable" translate>Select attribute or association</span>
+        <span ng-hide="ctrl.typeSelectable">{{('Select ' + ctrl.type) | translate}}</span>
+      </div>
+      <div ng-hide="ctrl.onlySelection">
+        <span ng-show="ctrl.typeSelectable" translate>Add attribute or association</span>
+        <span ng-hide="ctrl.typeSelectable">{{('Add ' + ctrl.type) | translate}}</span>
+      </div>
     </modal-title>
 
     <modal-body>
