Default value added to property
Closes #322

--- a/src/components/editor/propertyView.html
+++ b/src/components/editor/propertyView.html
@@ -21,6 +21,10 @@
     <input id="{{ctrl.property.internalId + 'example attribute'}}" class="form-control" type="text" datatype-input="{{ctrl.property.inputType}}" ng-model="ctrl.property.example" />
   </editable>
 
+  <editable title="Default value">
+    <input id="{{ctrl.property.internalId + 'default value'}}" class="form-control" type="text" datatype-input="{{ctrl.property.inputType}}" ng-model="ctrl.property.defaultValue" />
+  </editable>
+
   <editable title="State" value-as-localization-key="true">
     <state-select id="{{ctrl.property.internalId + 'state'}}" state="ctrl.property.state" model="ctrl.model"></state-select>
   </editable>
