--- a/src/components/editor/searchClassModal.html
+++ b/src/components/editor/searchClassModal.html
@@ -48,7 +48,7 @@
           <div ng-if="ctrl.isSelectionFormData()">
             <editable title="External URI">
               <div class="input-group input-group-md">
-                <input id="externalUri" type="text" class="form-control" required uri-input model="ctrl.model" ng-model="ctrl.selection.externalUri" />
+                <input id="externalUri" type="text" class="form-control" required uri-input="required-namespace" model="ctrl.model" ng-model="ctrl.selection.externalUri" />
               </div>
             </editable>
             <editable title="Class label">
