--- a/src/components/form/errorMessages.html
+++ b/src/components/form/errorMessages.html
@@ -14,8 +14,9 @@
     <li ng-message="negative">{{'Negative error' | translate}}</li>
     <li ng-message="greaterThanMax">{{'Greater than max error' | translate}}</li>
     <li ng-message="lessThanMin">{{'Less than min error' | translate}}</li>
-    <li ng-message="unknownNS">{{'Namespace is not required' | translate}}</li>
+    <li ng-message="unknownNS">{{'Unknown namespace' | translate}}</li>
     <li ng-message="idNameRequired">{{'Id name is required' | translate}}</li>
+    <li ng-message="mustBeRequiredNS">{{'Must be required namespace' | translate}}</li>
 
     <li ng-message-exp="error.key" ng-repeat="error in dynamicErrors">{{error.message | translate}} {{error.format}}</li>
   </ul>
