--- a/src/components/editor/subjectView.html
+++ b/src/components/editor/subjectView.html
@@ -1,7 +1,9 @@
-<label>{{(ctrl.title || 'Subject') | translate}}</label>
-<div ng-hide="ctrl.subject" translate>Not defined</div>
-<div class="model-view__sub">
-  <non-editable title="Id" value="ctrl.subject.id.uri" link="ctrl.subject.id.url"></non-editable>
-  <non-editable title="Label" value="ctrl.subject.label"></non-editable>
-  <non-editable title="Definition" value="ctrl.subject.comment"></non-editable>
+<div class="editable-wrap">
+  <label>{{(ctrl.title || 'Subject') | translate}}</label>
+  <div ng-hide="ctrl.subject" translate>Not defined</div>
+  <div class="model-view__sub">
+    <non-editable title="Id" value="ctrl.subject.id.uri" link="ctrl.subject.id.url"></non-editable>
+    <non-editable title="Label" value="ctrl.subject.label"></non-editable>
+    <non-editable title="Definition" value="ctrl.subject.comment"></non-editable>
+  </div>
 </div>
