--- a/src/components/editor/propertyView.html
+++ b/src/components/editor/propertyView.html
@@ -74,9 +74,9 @@
       </uib-accordion-heading>
       <non-editable title="Name" value="ctrl.predicate.label"></non-editable>
       <non-editable title="Description" value="ctrl.predicate.comment"></non-editable>
-      <non-editable title="Type" value="ctrl.predicate.rawType"></non-editable>
+      <non-editable title="Type" value="ctrl.predicate.normalizedType" value-as-localization-key="true"></non-editable>
       <non-editable title="Range" value="ctrl.predicate.range"></non-editable>
-      <non-editable title="{{ctrl.definedByTitle}}" value="ctrl.predicate.definedBy.id.compact" link="ctrl.predicate.iowUrl()"></non-editable>
+      <non-editable title="{{ctrl.definedByTitle}}" value="ctrl.predicate.definedBy.label" link="ctrl.model.linkTo(ctrl.predicate)"></non-editable>
       <subject-view subject="ctrl.predicate.subject"></subject-view>
     </uib-accordion-group>
   </uib-accordion>
