--- a/src/components/editor/propertyView.html
+++ b/src/components/editor/propertyView.html
@@ -76,7 +76,7 @@
       <non-editable title="Description" value="ctrl.predicate.comment"></non-editable>
       <non-editable title="Type" value="ctrl.predicate.normalizedType" value-as-localization-key="true"></non-editable>
       <non-editable title="Range" value="ctrl.predicate.range"></non-editable>
-      <non-editable title="{{ctrl.definedByTitle}}" value="ctrl.predicate.definedBy.label" link="ctrl.model.linkTo(ctrl.predicate)"></non-editable>
+      <defined-by entity="ctrl.predicate" model="ctrl.model"></defined-by>
       <subject-view subject="ctrl.predicate.subject"></subject-view>
     </uib-accordion-group>
   </uib-accordion>
