--- a/src/components/editor/propertyView.html
+++ b/src/components/editor/propertyView.html
@@ -70,8 +70,9 @@
   <uib-accordion>
     <uib-accordion-group is-open="predicateOpen">
       <uib-accordion-heading>
-        <span accordion-chevron is-open="predicateOpen">{{ctrl.property.predicate.compact}}</span>
+        <span accordion-chevron is-open="predicateOpen">{{ctrl.predicateName}}</span>
       </uib-accordion-heading>
+      <non-editable title="Id" value="ctrl.predicate.id"></non-editable>
       <non-editable title="Name" value="ctrl.predicate.label"></non-editable>
       <non-editable title="Description" value="ctrl.predicate.comment"></non-editable>
       <non-editable title="Type" value="ctrl.predicate.normalizedType" value-as-localization-key="true"></non-editable>
