Related resources, persisting doesn't work yet for an unknown reason

--- a/src/components/model/modelForm.html
+++ b/src/components/model/modelForm.html
@@ -18,6 +18,8 @@
   </editable>
 
   <editable-root-class model="ctrl.model"></editable-root-class>
+
+  <relations-view model="ctrl.model"></relations-view>
 </div>
 
 <div class="col-md-5 col-md-offset-1">
