--- a/src/components/editor/searchClassModal.html
+++ b/src/components/editor/searchClassModal.html
@@ -10,7 +10,8 @@
       <div class="row">
 
         <div class="col-md-4">
-          <p translate>Class search info</p>
+          <p ng-hide="ctrl.onlySelection" translate>Class search or create info</p>
+          <p ng-show="ctrl.onlySelection" translate>Class search info</p>
           <div class="input-group input-group-lg">
             <input autofocus type="text" class="form-control" placeholder="{{'search class' | translate}}"
                    ng-model="ctrl.searchText"
