--- a/src/components/editor/searchPredicateModal.html
+++ b/src/components/editor/searchPredicateModal.html
@@ -16,7 +16,8 @@
       <div class="row">
 
         <div class="col-md-4">
-          <p translate>Search predicate info</p>
+          <p ng-show="ctrl.onlySelection" translate>Search predicate info</p>
+          <p ng-hide="ctrl.onlySelection" translate>Search or create predicate info</p>
           <div class="input-group input-group-lg">
             <input autofocus type="text" class="form-control"
                    placeholder="{{(ctrl.typeSelectable ? 'search attribute or association' : 'search ' + ctrl.type) | translate}}"
