Remove editable-wrap nesting

--- a/src/components/editor/editableSubjectSelect.html
+++ b/src/components/editor/editableSubjectSelect.html
@@ -1,4 +1,4 @@
-<div class="editable-wrap">
+<div>
   <div ng-show="ctrl.subject || ctrl.isEditing()">
     <subject-view subject="ctrl.subject"></subject-view>
     <div ng-class="{'model-view__sub': !!ctrl.subject}">
