--- a/src/components/editor/subjectView.html
+++ b/src/components/editor/subjectView.html
@@ -1,6 +1,7 @@
 <div class="editable-wrap">
   <label>{{(ctrl.title || 'Subject') | translate}}</label>
   <div ng-hide="ctrl.subject" translate>Not defined</div>
+</div>
   <div class="model-view__sub">
     <non-editable title="Id" value="ctrl.subject.id.uri" link="ctrl.subject.id.url"></non-editable>
     <non-editable title="Label" value="ctrl.subject.label"></non-editable>
